--- a/public/checkout.html
+++ b/public/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout</title>
     <link rel="stylesheet" href="/output.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body class="font-idcSans bg-idcBackground text-idcText">
     <div
@@ -54,97 +55,79 @@
       class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
     >
       <div
-        class="modal-content bg-white p-6 rounded-xl shadow-lg w-full max-w-md"
+        class="modal-content bg-white p-6 rounded-xl shadow-lg w-full max-w-md flex flex-col"
       >
         <button
           class="close-button text-xl font-bold text-gray-700 absolute top-4 right-6"
         >
           &times;
         </button>
-        <h2 class="text-2xl font-bold mb-4">Order Details</h2>
-        <form id="orderDetailsForm" class="space-y-4">
-          <label for="name" class="block text-lg font-medium">Name</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            class="w-full border rounded-lg px-4 py-2"
-          />
+        <h2 class="text-2xl font-bold mb-4 text-center">Order Details</h2>
+        <div class="modal-body overflow-y-auto max-h-96 space-y-4">
+          <form id="orderDetailsForm" class="space-y-4">
+            <label for="name" class="block text-lg font-medium">Name</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              class="w-full border rounded-lg px-4 py-2"
+            />
 
-          <label for="email" class="block text-lg font-medium">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            class="w-full border rounded-lg px-4 py-2"
-          />
+            <label for="email" class="block text-lg font-medium">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              class="w-full border rounded-lg px-4 py-2"
+            />
 
-          <label for="phone" class="block text-lg font-medium"
-            >Phone Number</label
-          >
-          <input
-            type="tel"
-            id="phone"
-            name="phone"
-            required
-            placeholder="+254 712 345678"
-            class="w-full border rounded-lg px-4 py-2"
-          />
+            <label for="phone" class="block text-lg font-medium"
+              >Phone Number</label
+            >
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              required
+              placeholder="+254 712 345678"
+              class="w-full border rounded-lg px-4 py-2"
+            />
 
-          <label for="address" class="block text-lg font-medium">Address</label>
-          <input
-            type="text"
-            id="address"
-            name="address"
-            required
-            class="w-full border rounded-lg px-4 py-2"
-          />
+            <label for="address" class="block text-lg font-medium"
+              >Address</label
+            >
+            <input
+              type="text"
+              id="address"
+              name="address"
+              required
+              class="w-full border rounded-lg px-4 py-2"
+            />
 
-          <label for="payment" class="block text-lg font-medium"
-            >Payment Method</label
-          >
-          <input
-            type="text"
-            id="payment"
-            name="payment"
-            value="Cash on Delivery"
-            readonly
-            class="w-full border rounded-lg px-4 py-2 bg-gray-100"
-          />
-
+            <label for="payment" class="block text-lg font-medium"
+              >Payment Method</label
+            >
+            <input
+              type="text"
+              id="payment"
+              name="payment"
+              value="Cash on Delivery"
+              readonly
+              class="w-full border rounded-lg px-4 py-2 bg-gray-100"
+            />
+          </form>
+        </div>
+        <div class="mt-4">
           <button
             type="submit"
+            form="orderDetailsForm"
             class="w-full bg-idcHighlight text-idcText font-semibold py-2 px-4 rounded-lg hover:bg-yellow-500"
           >
             Submit Order
           </button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Order Confirmation Modal -->
-    <div
-      id="confirmationModal"
-      class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
-    >
-      <div
-        class="modal-content bg-white p-6 rounded-xl shadow-lg w-full max-w-md"
-      >
-        <h2 class="text-2xl font-bold text-idcText">
-          Order Placed Successfully!
-        </h2>
-        <p class="my-4 text-idcText">
-          Your order has been submitted. You will receive a confirmation email
-          shortly.
-        </p>
-        <button
-          onclick="window.location.href='/orders.html'"
-          class="w-full bg-idcHighlight text-idcText font-semibold py-2 px-4 rounded-lg hover:bg-yellow-500"
-        >
-          View Orders
-        </button>
+        </div>
       </div>
     </div>
 
