--- a/public/orders.html
+++ b/public/orders.html
@@ -1,77 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Orders</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Load a font called Roboto from Google Fonts. -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Here are the CSS files for this page. -->
-    <link rel="stylesheet" href="/styles/shared/general.css" />
-    <link rel="stylesheet" href="/styles/shared/amazon-header.css" />
-    <link rel="stylesheet" href="/styles/pages/orders.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Your Orders</title>
+    <link rel="stylesheet" href="/output.css" />
   </head>
-  <body>
-    <!-- Header section -->
-    <div class="amazon-header">
-      <button class="menu-toggle js-menu-toggle" data-tooltip="Menu">
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <div class="amazon-header-left-section">
-        <a href="/" class="header-link" data-tooltip="Home">
+  <body class="bg-idcBackground text-idcText font-idcSans">
+    <!-- Header -->
+    <header class="bg-white shadow-md p-4 flex items-center justify-between">
+      <div class="flex items-center">
+        <a href="/">
           <img
-            class="amazon-logo"
-            src="images/kenya-furniture-logo.png"
-            alt="Kenya Fashion Hub"
+            class="hidden lg:block h-8"
+            src="/images/kenya-furniture-logo.png"
+            alt="Kenya Furniture Hub"
           />
         </a>
       </div>
+      <div class="text-lg font-semibold">Your Orders</div>
+      <a href="/checkout.html" class="relative">
+        <img src="/images/icons/cart-icon.png" alt="Cart" class="h-6" />
+        <span
+          class="absolute top-0 right-0 bg-red-600 text-white text-sm w-5 h-5 flex items-center justify-center rounded-full js-cart-quantity"
+        >
+          0
+        </span>
+      </a>
+    </header>
 
-      <div class="amazon-header-middle-section">
-        <input
-          class="search-bar js-search-bar"
-          type="text"
-          placeholder="Search for Clothing..."
-        />
-
-        <button class="search-button js-search-button" data-tooltip="Search">
-          <i class="fas fa-search"></i>
-        </button>
-
-        <div class="suggestions-dropdown js-suggestions-dropdown">
-          <!-- Suggestions will be dynamically generated here -->
+    <!-- Main Content -->
+    <main class="max-w-7xl mx-auto p-6 mt-6">
+      <h1 class="text-2xl font-bold mb-6 text-center">Your Orders</h1>
+      <div class="space-y-6">
+        <!-- Orders Container -->
+        <div class="space-y-6 js-orders-grid">
+          <!-- Dynamic orders content will go here -->
         </div>
       </div>
-
-      <div class="amazon-header-right-section">
-        <button
-          class="auth-button js-auth-button header-link"
-          data-tooltip="Login/Logout"
-        ></button>
-
-        <a
-          class="cart-link header-link"
-          href="/checkout.html"
-          data-tooltip="Cart"
-        >
-          <img class="cart-icon" src="images/icons/cart-icon.png" alt="Cart" />
-          <div class="cart-quantity js-cart-quantity"></div>
-        </a>
-      </div>
-    </div>
-
-    <div class="main">
-      <div class="page-title">Your Orders</div>
-
-      <div class="orders-grid"></div>
-    </div>
+    </main>
 
     <script type="module" src="/scripts/orders.js"></script>
   </body>
