--- a/public/tracking.html
+++ b/public/tracking.html
@@ -13,12 +13,12 @@
     >
       <a href="/" class="flex items-center space-x-2">
         <img
-          src="images/amazon-logo-white.png"
+          src="/images/amazon-logo-white.png"
           alt="Logo"
           class="h-8 hidden sm:block"
         />
         <img
-          src="images/amazon-mobile-logo-white.png"
+          src="/images/amazon-mobile-logo-white.png"
           alt="Mobile Logo"
           class="h-8 sm:hidden"
         />
@@ -26,10 +26,10 @@
       <div class="flex items-center space-x-4">
         <a href="/orders.html" class="text-sm">Returns & Orders</a>
         <a href="/checkout.html" class="relative">
-          <img src="images/icons/cart-icon.png" alt="Cart" class="h-6" />
+          <img src="/images/icons/cart-icon.png" alt="Cart" class="h-6" />
           <span
-            class="absolute top-0 right-0 bg-red-600 text-white text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center"
-            >3</span
+            class="absolute top-0 right-0 bg-red-600 text-white text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center js-cart-count"
+            >0</span
           >
         </a>
       </div>
@@ -38,42 +38,20 @@
     <!-- Main Content -->
     <main class="max-w-4xl mx-auto p-6 mt-6 bg-white rounded-lg shadow">
       <!-- Back to Orders Link -->
-      <a href="/orders.html" class="text-idcPrimary underline mb-4 inline-block"
-        >View all orders</a
+      <a
+        href="/orders.html"
+        class="text-idcPrimary underline mb-4 inline-block"
       >
+        View all orders
+      </a>
 
-      <!-- Delivery Date -->
-      <h1 class="text-2xl font-bold mb-6">
-        <span class="delivery-date">Arriving on Wednesday, July 26</span>
-      </h1>
-
-      <!-- Product Details -->
-      <div class="flex items-center space-x-6">
-        <img
-          src="images/product-placeholder.png"
-          alt="Product"
-          class="w-36 h-36 rounded"
-        />
-        <div>
-          <h2 class="text-xl font-bold product-info">Product Name</h2>
-          <p class="text-gray-600 product-info">Quantity: 1</p>
-        </div>
-      </div>
-
-      <!-- Progress Bar -->
-      <div class="mt-8">
-        <div class="flex justify-between text-lg font-medium mb-2">
-          <span>Preparing</span>
-          <span class="text-green-600 font-bold">Shipped</span>
-          <span>Delivered</span>
-        </div>
-        <div class="relative h-4 bg-gray-200 rounded-full overflow-hidden">
-          <div
-            class="absolute top-0 left-0 h-full bg-green-600 rounded-full"
-            style="width: 50%"
-          ></div>
-        </div>
-      </div>
+      <!-- Products will be rendered dynamically -->
+      <section id="products-section">
+        <h1 class="text-2xl font-bold mb-6">Order Tracking</h1>
+        <p class="text-gray-500">Loading products...</p>
+      </section>
     </main>
+
+    <script type="module" src="/scripts/tracking.js"></script>
   </body>
 </html>
