--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,10 @@
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="/styles.css" />
   </head>
-
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-
-  <!-- custom css -->
-  <link rel="stylesheet" href="/styles.css" />
 
   <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Navbar -->
@@ -24,16 +18,23 @@
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
+        <!-- Logo -->
         <a href="/" class="text-xl font-bold text-idcPrimary"
           >Interior Design</a
         >
+
+        <!-- Navigation Links -->
         <nav id="mobile-nav" class="hidden md:flex space-x-8">
           <a href="#about" class="hover:text-idcHighlight">About</a>
           <a href="#services" class="hover:text-idcHighlight">Services</a>
+          <a href="/products.html" class="hover:text-idcHighlight">Products</a>
           <a href="#projects" class="hover:text-idcHighlight">Portfolio</a>
           <a href="#contact" class="hover:text-idcHighlight">Contact</a>
         </nav>
+
+        <!-- Cart and Auth Buttons -->
         <div class="flex items-center space-x-4">
+          <!-- Cart Icon -->
           <a href="/checkout.html" class="relative">
             <i class="fas fa-shopping-cart text-idcPrimary text-xl"></i>
             <span
@@ -44,9 +45,12 @@
             </span>
           </a>
 
-          <button
-            class="js-auth-button px-4 py-2 rounded-lg text-white"
-          ></button>
+          <!-- Auth Button -->
+          <button class="js-auth-button px-4 py-2 rounded-lg text-white">
+            Login
+          </button>
+
+          <!-- Mobile Menu Button -->
           <button id="mobile-menu" class="md:hidden">
             <i class="fas fa-bars text-idcPrimary text-xl"></i>
           </button>
@@ -54,7 +58,7 @@
       </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- hero section -->
     <section
       id="hero"
       class="container mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8 py-16 px-6"
@@ -128,18 +132,6 @@
         </h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
           <!-- Service cards dynamically populated -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Featured Products Section -->
-    <section id="featured-products" class="py-16 bg-idcBackground">
-      <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
-          Featured Products
-        </h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Products dynamically populated here -->
         </div>
       </div>
     </section>
@@ -321,7 +313,7 @@
         <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           FAQs
         </h2>
-        <div id="faqsAccordion" class="accordion"></div>
+        <div id="faqsAccordion" class="space-y-4"></div>
       </div>
     </section>
 
