--- a/public/products.html
+++ b/public/products.html
@@ -67,13 +67,20 @@
         <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Our Products
         </h2>
+        <!-- Grid for products and skeletons -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Skeleton placeholders -->
+          <!-- Skeletons to mimic product containers -->
           <div
             class="skeleton bg-idcAccent p-6 rounded-lg shadow-lg"
             style="display: none"
-          ></div>
+          >
+            <div class="w-full h-48 bg-gray-300 rounded-lg mb-4"></div>
+            <div class="h-6 bg-gray-300 rounded mb-2 w-3/4"></div>
+            <div class="h-6 bg-gray-300 rounded mb-4 w-1/2"></div>
+            <div class="h-6 bg-gray-300 rounded w-1/3"></div>
+          </div>
         </div>
+        <!-- Load More button -->
         <div class="text-center mt-8">
           <button
             id="load-more"
